--- a/src/output.css
+++ b/src/output.css
@@ -9,11 +9,14 @@
     --spacing: 0.25rem;
     --text-lg: 1.125rem;
     --text-lg--line-height: calc(1.75 / 1.125);
-    --text-3xl: 1.875rem;
-    --text-3xl--line-height: calc(2.25 / 1.875);
+    --text-5xl: 3rem;
+    --text-5xl--line-height: 1;
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
     --radius-xl: 0.75rem;
+    --ease-in: cubic-bezier(0.4, 0, 1, 1);
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -161,14 +164,65 @@
   }
 }
 @layer utilities {
+  .collapse {
+    visibility: collapse;
+  }
+  .visible {
+    visibility: visible;
+  }
+  .absolute {
+    position: absolute;
+  }
+  .fixed {
+    position: fixed;
+  }
+  .relative {
+    position: relative;
+  }
   .static {
     position: static;
+  }
+  .sticky {
+    position: sticky;
+  }
+  .container {
+    width: 100%;
+    @media (width >= 40rem) {
+      max-width: 40rem;
+    }
+    @media (width >= 48rem) {
+      max-width: 48rem;
+    }
+    @media (width >= 64rem) {
+      max-width: 64rem;
+    }
+    @media (width >= 80rem) {
+      max-width: 80rem;
+    }
+    @media (width >= 96rem) {
+      max-width: 96rem;
+    }
+  }
+  .mx-auto {
+    margin-inline: auto;
   }
   .mt-3 {
     margin-top: calc(var(--spacing) * 3);
   }
-  .mt-5 {
-    margin-top: calc(var(--spacing) * 5);
+  .mt-10 {
+    margin-top: calc(var(--spacing) * 10);
+  }
+  .mt-\[2rem\] {
+    margin-top: 2rem;
+  }
+  .mr-2 {
+    margin-right: calc(var(--spacing) * 2);
+  }
+  .mr-\[1\.8rem\] {
+    margin-right: 1.8rem;
+  }
+  .mr-\[1rem\] {
+    margin-right: 1rem;
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
@@ -185,14 +239,89 @@
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
   }
+  .mb-\[6rem\] {
+    margin-bottom: 6rem;
+  }
+  .ml-\[3rem\] {
+    margin-left: 3rem;
+  }
+  .block {
+    display: block;
+  }
+  .block\! {
+    display: block !important;
+  }
   .contents {
     display: contents;
   }
   .flex {
     display: flex;
   }
+  .flow-root {
+    display: flow-root;
+  }
+  .grid {
+    display: grid;
+  }
+  .hidden {
+    display: none;
+  }
+  .inline {
+    display: inline;
+  }
+  .inline-block {
+    display: inline-block;
+  }
+  .inline-flex {
+    display: inline-flex;
+  }
+  .inline-grid {
+    display: inline-grid;
+  }
+  .inline-table {
+    display: inline-table;
+  }
+  .list-item {
+    display: list-item;
+  }
   .table {
     display: table;
+  }
+  .table-caption {
+    display: table-caption;
+  }
+  .table-cell {
+    display: table-cell;
+  }
+  .table-column {
+    display: table-column;
+  }
+  .table-column-group {
+    display: table-column-group;
+  }
+  .table-footer-group {
+    display: table-footer-group;
+  }
+  .table-header-group {
+    display: table-header-group;
+  }
+  .table-row {
+    display: table-row;
+  }
+  .table-row-group {
+    display: table-row-group;
+  }
+  .h-\[3rem\] {
+    height: 3rem;
+  }
+  .h-\[13rem\] {
+    height: 13rem;
+  }
+  .h-\[100\%\] {
+    height: 100%;
+  }
+  .h-full {
+    height: 100%;
   }
   .h-screen {
     height: 100vh;
@@ -200,11 +329,35 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-4 {
+    width: calc(var(--spacing) * 4);
+  }
+  .w-\[2rem\] {
+    width: 2rem;
+  }
+  .w-\[3rem\] {
+    width: 3rem;
+  }
   .w-\[10rem\] {
     width: 10rem;
   }
+  .w-\[11rem\] {
+    width: 11rem;
+  }
   .w-full {
     width: 100%;
+  }
+  .border-collapse {
+    border-collapse: collapse;
+  }
+  .transform {
+    transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
+  }
+  .cursor-pointer {
+    cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .flex-col {
     flex-direction: column;
@@ -212,22 +365,42 @@
   .items-center {
     align-items: center;
   }
+  .justify-center {
+    justify-content: center;
+  }
+  .justify-start {
+    justify-content: flex-start;
+  }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
   .gap-1\.5 {
     gap: calc(var(--spacing) * 1.5);
   }
   .gap-3 {
     gap: calc(var(--spacing) * 3);
   }
+  .gap-\[20\%\] {
+    gap: 20%;
+  }
   .rounded-xl {
     border-radius: var(--radius-xl);
   }
-  .border-0 {
+  .border {
     border-style: var(--tw-border-style);
-    border-width: 0px;
+    border-width: 1px;
+  }
+  .border-1 {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
   }
   .border-2 {
     border-style: var(--tw-border-style);
     border-width: 2px;
+  }
+  .border-b-1 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
   }
   .border-dashed {
     --tw-border-style: dashed;
@@ -235,6 +408,12 @@
   }
   .border-\[hsl\(245\,15\%\,58\%\)\] {
     border-color: hsl(245,15%,58%);
+  }
+  .border-\[hsl\(247\,10\%\,51\%\)\] {
+    border-color: hsl(247,10%,51%);
+  }
+  .border-b-\[hsl\(252\,6\%\,83\%\)\] {
+    border-bottom-color: hsl(252,6%,83%);
   }
   .bg-\[hsl\(7\,88\%\,67\%\)\] {
     background-color: hsl(7,88%,67%);
@@ -245,17 +424,32 @@
   .bg-\[hsl\(245\,19\%\,35\%\)\]\/50 {
     background-color: color-mix(in oklab, hsl(245,19%,35%) 50%, transparent);
   }
+  .bg-gradient-to-r {
+    --tw-gradient-position: to right in oklab;
+    background-image: linear-gradient(var(--tw-gradient-stops));
+  }
+  .from-\[hsl\(7\,86\%\,67\%\)\] {
+    --tw-gradient-from: hsl(7,86%,67%);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-\[hsl\(0\,0\%\,100\%\)\] {
+    --tw-gradient-to: hsl(0,0%,100%);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .bg-clip-text {
+    background-clip: text;
+  }
+  .object-cover {
+    object-fit: cover;
+  }
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
   }
-  .px-8 {
-    padding-inline: calc(var(--spacing) * 8);
-  }
-  .px-\[5rem\] {
-    padding-inline: 5rem;
+  .px-\[2rem\] {
+    padding-inline: 2rem;
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
@@ -263,31 +457,46 @@
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
   }
-  .pt-8 {
-    padding-top: calc(var(--spacing) * 8);
-  }
   .text-center {
     text-align: center;
   }
+  .text-left {
+    text-align: left;
+  }
   .font-\[Inconsolata\] {
     font-family: Inconsolata;
-  }
-  .text-3xl {
-    font-size: var(--text-3xl);
-    line-height: var(--tw-leading, var(--text-3xl--line-height));
   }
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
   }
-  .text-\[1\.1rem\] {
-    font-size: 1.1rem;
-  }
   .text-\[1\.2rem\] {
     font-size: 1.2rem;
   }
+  .text-\[1\.8rem\] {
+    font-size: 1.8rem;
+  }
+  .text-\[1rem\] {
+    font-size: 1rem;
+  }
+  .text-\[2rem\] {
+    font-size: 2rem;
+  }
   .text-\[11px\] {
     font-size: 11px;
+  }
+  .text-\[clamp\(0\.8rem\,2\.5vw\,0\.9rem\)\] {
+    font-size: clamp(0.8rem, 2.5vw, 0.9rem);
+  }
+  .text-\[clamp\(1\.1rem\,4vw\,1\.2rem\)\] {
+    font-size: clamp(1.1rem, 4vw, 1.2rem);
+  }
+  .text-\[clamp\(1\.3rem\,5vw\,2rem\)\] {
+    font-size: clamp(1.3rem, 5vw, 2rem);
+  }
+  .leading-\[2\.2rem\] {
+    --tw-leading: 2.2rem;
+    line-height: 2.2rem;
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -297,15 +506,171 @@
     --tw-font-weight: var(--font-weight-extrabold);
     font-weight: var(--font-weight-extrabold);
   }
+  .break-all {
+    word-break: break-all;
+  }
+  .text-\[hsl\(7\,71\%\,60\%\)\] {
+    color: hsl(7,71%,60%);
+  }
+  .text-\[hsl\(245\,15\%\,58\%\)\] {
+    color: hsl(245,15%,58%);
+  }
   .text-\[hsl\(249\,21\%\,12\%\)\] {
     color: hsl(249,21%,12%);
+  }
+  .text-transparent {
+    color: transparent;
+  }
+  .capitalize {
+    text-transform: capitalize;
+  }
+  .lowercase {
+    text-transform: lowercase;
+  }
+  .uppercase {
+    text-transform: uppercase;
+  }
+  .italic {
+    font-style: italic;
+  }
+  .line-through {
+    text-decoration-line: line-through;
+  }
+  .overline {
+    text-decoration-line: overline;
+  }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .shadow {
+    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .blur {
+    --tw-blur: blur(8px);
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .transition {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .duration-500 {
+    --tw-duration: 500ms;
+    transition-duration: 500ms;
+  }
+  .ease-in {
+    --tw-ease: var(--ease-in);
+    transition-timing-function: var(--ease-in);
+  }
+  .hover\:bg-\[hsl\(7\,71\%\,60\%\)\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: hsl(7,71%,60%);
+      }
+    }
+  }
+  .hover\:bg-\[hsl\(245\,19\%\,35\%\)\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: hsl(245,19%,35%);
+      }
+    }
+  }
+  .focus\:outline-2 {
+    &:focus {
+      outline-style: var(--tw-outline-style);
+      outline-width: 2px;
+    }
+  }
+  .focus\:outline-offset-2 {
+    &:focus {
+      outline-offset: 2px;
+    }
+  }
+  .focus\:outline-\[hsl\(0\,0\%\,100\%\)\] {
+    &:focus {
+      outline-color: hsl(0,0%,100%);
+    }
+  }
+  .focus\:outline-\[hsl\(245\,15\%\,58\%\)\] {
+    &:focus {
+      outline-color: hsl(245,15%,58%);
+    }
+  }
+  .sm\:mb-2 {
+    @media (width >= 40rem) {
+      margin-bottom: calc(var(--spacing) * 2);
+    }
+  }
+  .sm\:mb-8 {
+    @media (width >= 40rem) {
+      margin-bottom: calc(var(--spacing) * 8);
+    }
+  }
+  .sm\:w-\[27rem\] {
+    @media (width >= 40rem) {
+      width: 27rem;
+    }
+  }
+  .sm\:w-\[30rem\] {
+    @media (width >= 40rem) {
+      width: 30rem;
+    }
+  }
+  .sm\:text-\[2rem\] {
+    @media (width >= 40rem) {
+      font-size: 2rem;
+    }
+  }
+  .xl\:mx-\[5rem\] {
+    @media (width >= 80rem) {
+      margin-inline: 5rem;
+    }
+  }
+  .xl\:w-\[50\%\] {
+    @media (width >= 80rem) {
+      width: 50%;
+    }
+  }
+  .xl\:gap-\[30\%\] {
+    @media (width >= 80rem) {
+      gap: 30%;
+    }
+  }
+  .xl\:text-5xl {
+    @media (width >= 80rem) {
+      font-size: var(--text-5xl);
+      line-height: var(--tw-leading, var(--text-5xl--line-height));
+    }
+  }
+  .xl\:leading-\[3\.5rem\] {
+    @media (width >= 80rem) {
+      --tw-leading: 3.5rem;
+      line-height: 3.5rem;
+    }
+  }
+  .\32 xl\:mx-\[8rem\] {
+    @media (width >= 96rem) {
+      margin-inline: 8rem;
+    }
+  }
+  .\32 xl\:mx-\[12rem\] {
+    @media (width >= 96rem) {
+      margin-inline: 12rem;
+    }
+  }
+  .\32 xl\:gap-\[35\%\] {
+    @media (width >= 96rem) {
+      gap: 35%;
+    }
   }
 }
 @font-face {
@@ -313,10 +678,10 @@
   src: url("./assets/fonts/Inconsolata-VariableFont_wdth-wght.ttf"), format("truetype"), url("./assets/fonts/static/Inconsolata-Bold.ttf") url("./assets/fonts/static/Inconsolata-ExtraBold.ttf") format("truetype"), url("./assets/fonts/static/Inconsolata-Medium.ttf"), url("./assets/fonts/static/Inconsolata-Regular.ttf");
 }
 .bg-mobile {
-  background-image: url("../src/assets/images/background-mobile.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  background-image: url("./assets/images/pattern-squiggly-line-bottom-mobile-tablet.svg"), url("../src/assets/images/background-mobile.png");
+  background-size: 20rem, auto;
+  background-repeat: no-repeat, no-repeat;
+  background-position: 1% 50rem, right;
 }
 .input-field {
   border: 0.5px solid hsl(252, 6%, 83%);
@@ -327,6 +692,23 @@
   margin-bottom: 1.5rem;
   width: 100%;
   font-size: 1.1rem;
+  transition: 500ms ease-in-out;
+}
+input[type="email"].input-field {
+  margin-bottom: 0.5rem;
+}
+.input-field:hover {
+  background-color: hsl(245, 19%, 35%);
+}
+.input-field:focus {
+  outline: 2px solid hsl(245, 15%, 58%);
+  outline-offset: 2px;
+}
+input[type="email"]:invalid:not(:placeholder-shown) {
+  border: 1px solid hsl(7, 71%, 60%);
+}
+input[type="email"]:invalid:not(:placeholder-shown):not(:focus) + .error-msg {
+  display: block;
 }
 .text-gray {
   color: hsl(252, 6%, 83%);
@@ -334,14 +716,207 @@
 .text-neutral {
   color: hsl(0, 0%, 100%);
 }
+.squiggly-lines {
+  background-image: url("./assets/images/pattern-circle.svg"), url("./assets/images/pattern-squiggly-line-top.svg"), url("./assets/images/pattern-lines.svg");
+  background-repeat: no-repeat, no-repeat, no-repeat;
+  background-size: 30%, 30%, 57rem;
+  background-position: -6% -3%, 100% 2%, top;
+}
+.img-btn {
+  background-color: hsla(245, 19%, 35%, 0.53);
+  border-radius: 5px;
+  color: hsl(252, 6%, 83%);
+  padding: 0.2rem 0.6rem;
+  font-size: 0.8rem;
+  cursor: pointer;
+}
+.ticket-img {
+  background-image: url("./assets/images/pattern-ticket.svg");
+  background-size: 100%;
+  background-position: center 0;
+  background-repeat: no-repeat;
+  aspect-ratio: 15 / 7;
+}
+.download {
+  margin-top: 2rem;
+  border: 1px solid black;
+  border-radius: 2rem;
+  padding: 0.5rem 1.3rem;
+  background-color: hsl(7, 71%, 60%);
+  color: hsl(248, 70%, 10%);
+  cursor: pointer;
+  font-weight: 600;
+  transition: 500ms ease-in;
+}
+.download:focus {
+  outline: 1px solid hsl(0, 0%, 100%);
+  outline-offset: 2px;
+}
+.download:hover {
+  background-color: hsl(7, 88%, 67%);
+}
+.vertical-text {
+  writing-mode: vertical-lr;
+}
+@media (min-width: 640px) {
+  .bg-mobile {
+    background-image: none;
+  }
+  .bg-tablet {
+    background-image: url("./assets/images/pattern-squiggly-line-bottom-mobile-tablet.svg"), url("./assets/images/pattern-circle.svg"), url("./assets/images/pattern-squiggly-line-top.svg"), url("./assets/images/pattern-lines.svg"), url("./assets/images/background-tablet.png");
+    background-size: 60%, 18%, 30%, 100%, auto;
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
+    background-position: -1% 100%, 2% -5%, 100% 2%, top, right;
+  }
+  .squiggly-lines {
+    background-image: none;
+  }
+}
+@media (min-width: 1280px) {
+  .bg-tablet {
+    background-image: none;
+  }
+  .bg-desktop {
+    background-image: url("./assets/images/pattern-squiggly-line-bottom-desktop.svg"), url("./assets/images/pattern-circle.svg"), url("./assets/images/pattern-squiggly-line-top.svg"), url("./assets/images/pattern-lines.svg"), url("./assets/images/background-desktop.png");
+    background-size: 60%, 13%, 30%, 100%, auto;
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
+    background-position: -20% 40rem, 2% -10%, 100% 2%, top, center;
+  }
+}
+@property --tw-rotate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: rotateX(0);
+}
+@property --tw-rotate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: rotateY(0);
+}
+@property --tw-rotate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: rotateZ(0);
+}
+@property --tw-skew-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: skewX(0);
+}
+@property --tw-skew-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: skewY(0);
+}
 @property --tw-border-style {
   syntax: "*";
   inherits: false;
   initial-value: solid;
 }
+@property --tw-gradient-position {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-via {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-to {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-via-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 0%;
+}
+@property --tw-gradient-via-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 50%;
+}
+@property --tw-gradient-to-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
+@property --tw-leading {
+  syntax: "*";
+  inherits: false;
+}
 @property --tw-font-weight {
   syntax: "*";
   inherits: false;
+}
+@property --tw-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
+@property --tw-shadow-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-inset-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
+@property --tw-inset-shadow-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-ring-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-ring-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
+@property --tw-inset-ring-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-inset-ring-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
+@property --tw-ring-inset {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-ring-offset-width {
+  syntax: "<length>";
+  inherits: false;
+  initial-value: 0px;
+}
+@property --tw-ring-offset-color {
+  syntax: "*";
+  inherits: false;
+  initial-value: #fff;
+}
+@property --tw-ring-offset-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
 }
 @property --tw-outline-style {
   syntax: "*";
@@ -385,6 +960,14 @@
   inherits: false;
 }
 @property --tw-drop-shadow {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-ease {
   syntax: "*";
   inherits: false;
 }
