--- a/src/output.css
+++ b/src/output.css
@@ -263,17 +263,8 @@
   .w-full {
     width: 100%;
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .transform {
-    transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
-  }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .flex-col {
     flex-direction: column;
@@ -287,9 +278,6 @@
   .justify-start {
     justify-content: flex-start;
   }
-  .gap-1 {
-    gap: calc(var(--spacing) * 1);
-  }
   .gap-1\.5 {
     gap: calc(var(--spacing) * 1.5);
   }
@@ -301,10 +289,6 @@
   }
   .rounded-xl {
     border-radius: var(--radius-xl);
-  }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
   }
   .border-1 {
     border-style: var(--tw-border-style);
@@ -404,9 +388,6 @@
   .text-\[clamp\(0\.8rem\,2\.5vw\,0\.9rem\)\] {
     font-size: clamp(0.8rem, 2.5vw, 0.9rem);
   }
-  .text-\[clamp\(1\.1rem\,4vw\,1\.2rem\)\] {
-    font-size: clamp(1.1rem, 4vw, 1.2rem);
-  }
   .text-\[clamp\(1\.3rem\,5vw\,2rem\)\] {
     font-size: clamp(1.3rem, 5vw, 2rem);
   }
@@ -436,9 +417,6 @@
   }
   .text-transparent {
     color: transparent;
-  }
-  .underline {
-    text-decoration-line: underline;
   }
   .outline {
     outline-style: var(--tw-outline-style);
@@ -568,7 +546,7 @@
   src: url("./assets/fonts/Inconsolata-VariableFont_wdth-wght.ttf"), format("truetype"), url("./assets/fonts/static/Inconsolata-Bold.ttf") url("./assets/fonts/static/Inconsolata-ExtraBold.ttf") format("truetype"), url("./assets/fonts/static/Inconsolata-Medium.ttf"), url("./assets/fonts/static/Inconsolata-Regular.ttf");
 }
 .bg-mobile {
-  background-image: url("./assets/images/pattern-squiggly-line-bottom-mobile-tablet.svg"), url("../src/assets/images/background-mobile.png");
+  background-image: url("./assets/images/pattern-squiggly-line-bottom-mobile-tablet.svg"), url("./assets/images/background-mobile.png");
   background-size: 20rem, auto;
   background-repeat: no-repeat, no-repeat;
   background-position: 1% 50rem, right;
@@ -686,31 +664,6 @@ input[type="email"]:invalid:not(:placeholder-shown):not(:focus) + .error-msg {
     background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
     background-position: -20% 40rem, 2% -10%, 100% 2%, top, center;
   }
-}
-@property --tw-rotate-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: rotateX(0);
-}
-@property --tw-rotate-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: rotateY(0);
-}
-@property --tw-rotate-z {
-  syntax: "*";
-  inherits: false;
-  initial-value: rotateZ(0);
-}
-@property --tw-skew-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: skewX(0);
-}
-@property --tw-skew-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: skewY(0);
 }
 @property --tw-border-style {
   syntax: "*";
